--- a/Developer/jsDeveloper.html
+++ b/Developer/jsDeveloper.html
@@ -1,55 +1,65 @@
-<!-- html:5 باستخدام HTMLقم بتهيئة ملفك ال -->
+<!-- html:5 باستخدام HTMLقم بتهيئة ملفك ال -->...
+<!DOCTYPE html>
+<html lang="en">
+<head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Document</title>
+     <script src="scripts.js"></script>
+</head>
+<body>
+     
+</body>
+</html>
 
-<!-- HTMLبصفحتك ال scripts.js قم بربط ملف -->
+<!-- HTMLبصفحتك ال scripts.js قم بربط ملف -->...
 
-<!-- المهام -->
+<!-- المهام -->...
 
-<!-- المهمة الأولى -->
+<!-- المهمة الأولى -->...
 
 <!-- .في هذه المهمة، ستقوم بإنشاء نظام توظيف 
-     .ستطرح على المستخدم بعض الأسئلة، واعتمادًا على إجاباته، ستقبل مقدم الطلب أو ترفضه -->
+         .ستطرح على المستخدم بعض الأسئلة، واعتمادًا على إجاباته، ستقبل مقدم الطلب أو ترفضه -->...
 
-<!-- :لقبول المتقدم للوظيفة يجد أن تتوفر فيه ثلاث شروط  -->
+<!-- :لقبول المتقدم للوظيفة يجد أن تتوفر فيه ثلاث شروط  -->...
 
-<!-- أن يكون عمره أكبر من 25 وأقل من 40 -->
-<!-- أن تكون عنده سنوات خبرة تزيد عن 3 سنوات -->
-<!-- أن تكون إحدى لغات البرمجة التي يبرمج بها المتقدم للوظيفة 
-     هي لغة البرمجة المطلوبة من قبل البرنامج -->
+<!-- أن يكون عمره أكبر من 25 وأقل من 40 -->...
+<!-- أن تكون عنده سنوات خبرة تزيد عن 3 سنوات -->...
+<!-- أن تكون إحدى لغات البرمجة التي يبرمج بها المتقدم للوظيفة ...
+     هي لغة البرمجة المطلوبة من قبل البرنامج -->...
 
-<!-- قم بكتابة السطور البرمجية اللازمة 
-     qu1.mov للحصول على النتيجة الموضحة في الفيديو -->
+<!-- قم بكتابة السطور البرمجية اللازمة ...
+     qu1.mov للحصول على النتيجة الموضحة في الفيديو -->...
 
-<!-- 🔥بونص المهمة الأولى -->
-<!-- قم ببناء واجهة تستقبل المدخلات من المستخدم عن طريق حقول إدخال 
-     وإظهار النتائج على الصفحة -->
+<!-- 🔥بونص المهمة الأولى -->...
+<!-- قم ببناء واجهة تستقبل المدخلات من المستخدم عن طريق حقول إدخال ...
+     وإظهار النتائج على الصفحة -->...
 
 <!-- -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.- -->
 
-<!-- المهمة الثانية -->
-
+<!-- المهمة الثانية --> ...
 <!-- 🌡في هذه المهمة، ستقوم ببناء مقياس درجات حرارة فاخر -->
-
 <!-- الخطوات -->
+...
+<!-- consoleقم بكتابة دالة تستقبل مصفوفة من درجات الحرارة وتقوم بطباعتها في ال -->...
+<!-- classwork في ال logger() تذكر دالة -->...
 
-<!-- consoleقم بكتابة دالة تستقبل مصفوفة من درجات الحرارة وتقوم بطباعتها في ال -->
-<!-- classwork في ال logger() تذكر دالة -->
+<!-- قم بكتابة دالة تستقبل مصفوفة من درجات الحرارة بالفهرنهايت ...
+     وترجع مصفوفة بهذه القيم محولة إلى المقياس السيليزي -->...
+<!-- C = (F - 32) * (5/9) استخدم العملية -->...
 
-<!-- قم بكتابة دالة تستقبل مصفوفة من درجات الحرارة بالفهرنهايت 
-     وترجع مصفوفة بهذه القيم محولة إلى المقياس السيليزي -->
-<!-- C = (F - 32) * (5/9) استخدم العملية -->
+<!-- قم بكتابة دالة تستقبل مصفوفة من درجات بالمقيا السيليزي وقيمة مبدئية/أولية ...
+     وتقوم بإرجاع مصفوفة من درجات الحرارة الأكبر من القيمة المبدئية -->...
+<!-- classwork في ال hottestDays() تذكر دالة -->...
 
-<!-- قم بكتابة دالة تستقبل مصفوفة من درجات بالمقيا السيليزي وقيمة مبدئية/أولية 
-     وتقوم بإرجاع مصفوفة من درجات الحرارة الأكبر من القيمة المبدئية -->
-<!-- classwork في ال hottestDays() تذكر دالة -->
+<!-- قم بكتابة دالة تستقبل مصفوفة من درجات الحرارة وقيمة مبدئية بالفهرنهايت -->...
+<!-- console وتقوم بطباعة درجات الحرارة الأكبر من القيمة المبدئية بالسيليزي في ال -->...
 
-<!-- قم بكتابة دالة تستقبل مصفوفة من درجات الحرارة وقيمة مبدئية بالفهرنهايت -->
-<!-- console وتقوم بطباعة درجات الحرارة الأكبر من القيمة المبدئية بالسيليزي في ال -->
+<!-- قم بكتابة السطور البرمجية اللازمة ...
+     task22.png و task21.png للحصول على النتيجة الموضحة في الصور -->...
 
-<!-- قم بكتابة السطور البرمجية اللازمة 
-     task22.png و task21.png للحصول على النتيجة الموضحة في الصور -->
-
-<!-- 🔥بونص المهمة الثانية -->
-<!-- for loop بدلاً من .forEach .filter .map قم باستخدام طرق -->
+<!-- 🔥بونص المهمة الثانية -->...
+<!-- for loop بدلاً من .forEach .filter .map قم باستخدام طرق -->...
 
 <!-- -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.- -->
 
